tests/fixtures/fail/type_mismatch.sc
let main(): i32 = { true }
